# filadelfias

./: .gitignore  ANALISE-E2E-TESTS.md  Gemini.md  README.md  ROADMAP.md  analise-de-seguranca-atualizada.md  analise-de-seguranca-e-plano-de-implementacao.md  análise-de-testes.md  docker-compose.test.yml  docker-compose.yml  firebase.json  firestore.rules  fleet.yaml  governance-meetings.md  logo.ai  novaexperienciadosusuarios.md  novofluxo.md  retrofit_backend_jan.md  retrofitweb__jan.md  run_e2e_local.sh
apps/backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  pytest.ini
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0d1d276e5bfa_create_ebd_tables.py  20260318_0001_initial_core_schema.py  20260318_0002_events_prayer.py  20260318_0003_devotionals.py  20260318_0004_missions_expense.py  20260318_0005_tithe_records.py  20260318_0006_financial_core.py  20260318_0007_governance.py  20260318_0008_ebd.py  20260320_0009_assets_inventory.py  20260320_0010_prayer_missionary_link.py  20260320_0011_social_projects.py  20260320_0012_prayer_social_project_link.py  20260322_0013_bible_postgres.py  20260322_0014_bible_indexes.py  20260323_0015_bible_search_vector.py  20260330_0016_meeting_votes.py  2c6672df2e12_add_address_and_member_fields.py  3a7b8c9d0e1f_add_office_and_functions_to_member.py  3c45826e06fa_create_financial_tables.py  4b5c6d7e8f9a_add_member_address_fields.py  5c6d7e8f9a0b_add_password_management_fields.py  65b5511953fb_create_governance_tables.py  8476ecea9867_create_members_table.py  a66a10114323_create_missionary_table.py  eb75b8fefb4c_initial_migration_users_tenants_.py
apps/backend/src/: config.py  main.py
apps/backend/src/api/: auth.py  bible.py  churches.py  devotionals.py  ebd.py  events.py  expense.py  financial.py  governance.py  hymnal.py  invitations.py  manual.py  members.py  memberships.py  metadata.py  mission.py  prayer.py  tenants.py  tithe.py
apps/backend/src/assets/: hymnal_nc.json  manual_2019.json
apps/backend/src/domain/: enums.py  financial_categories.py  labels.py  schemas.py  validators.py
apps/backend/src/infra/: base.py  database.py  firebase.py  firestore_repository.py  models.py  repositories.py  security.py
apps/backend/src/infra/db/: __init__.py  base.py  models.py  session.py
apps/backend/src/infra/repositories/: __init__.py  bible_repository.py  ebd_repository.py  financial_repository.py  governance_repository.py  member_repository.py  membership_repository.py  reading_plan_repository.py  sqlalchemy_repository.py  tenant_repository.py  user_repository.py
apps/backend/src/lib/: permissions.py
apps/backend/src/middleware/: __init__.py  logging_middleware.py  permissions.py  rate_limiter.py
apps/backend/src/modules/devotionals/: repository.py  schemas.py
apps/backend/src/modules/ebd/: models.py  repository.py  schemas.py
apps/backend/src/modules/events/: repository.py  schemas.py
apps/backend/src/scripts/: README_SEED.md  __init__.py  benchmark_bible.py  import_bible_data.py  seed_dev_data.py  seed_e2e_data.py
apps/backend/src/services/: __init__.py  bible_metadata.py  bible_service.py  deletion_service.py  ebd_service.py  email_service.py  financial_service.py  governance_service.py  hymnal_service.py  logging_service.py  manual_service.py  mission_service.py  reading_plan_service.py
apps/backend/tests/: conftest.py
apps/backend/tests/integration/: test_auth_endpoints.py  test_bible_endpoints.py  test_devotionals_endpoints.py  test_ebd_endpoints.py  test_events_endpoints.py  test_financial_endpoints.py  test_governance_endpoints.py  test_invitations_endpoints.py  test_members_endpoints.py  test_mission_endpoints.py  test_prayer_endpoints.py  test_tenants_endpoints.py  test_tithe_endpoints.py
apps/backend/tests/unit/: test_bible_service.py  test_config.py  test_email_service.py  test_permissions.py  test_security.py  test_user_repository.py
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json  desktop-updater.json
apps/tauri/src-tauri/icons/: icon.icns
apps/tauri/src-tauri/src/: lib.rs  main.rs
docs/: README.md  (+12 more)
(+785 files in other folders)
