[tool.poetry]
name = "filadelfias-api"
version = "0.1.0"
description = "API Backend para Filadelfias"
authors = ["Leco <leco@filadelfias.app>"]
readme = "README.md"
package-mode = false

[tool.poetry.scripts]
seed-e2e = "src.scripts.seed_e2e_data:main"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.12.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "4.0.1"
python-multipart = "^0.0.21"
httpx = "^0.28.1"
resend = "^2.0.0"
slowapi = "^0.1.9"
sqlalchemy = "^2.0.44"
asyncpg = "^0.30.0"
alembic = "^1.17.1"
greenlet = "^3.2.4"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
ruff = "^0.14.13"
black = "^26.1.0"
testcontainers = "^4.14.0"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/scripts/*",
    "src/assets/*",
    "src/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
